Fix text and video alignment on imagine page

--- a/app/assets/stylesheets/imagine/_body.sass
+++ b/app/assets/stylesheets/imagine/_body.sass
@@ -41,6 +41,7 @@
     text-transform: uppercase
     font-size: 20px
     padding: 10px
+    padding-top: 0
     font-family: "Folk-solid"
     color: $dark_gray
 
