--- a/app/assets/stylesheets/imagine/content/_index.sass
+++ b/app/assets/stylesheets/imagine/content/_index.sass
@@ -62,6 +62,7 @@
         float: right
         width: 310px
         padding: 5px
+        padding-top: 0
         margin-right: 45px
         font-size: 1em
         h2
@@ -94,6 +95,7 @@
   .category_list
     overflow: hidden
     margin-top: 10px
+    margin-bottom: 20px
     .category
       +grid(3)
       +alpha
